@@ -8,6 +8,9 @@ Changes - Apache mod_perl change logfile
 
 =item 1.15_01-dev
 
+when rwrite() returns -1, break out of the loop, no longer checking
+r->connection->aborted 
+
 fix $...NameWithVirtualHost defaulting in Apache::PerlRun 
 ["Ryan A. Whelan" <rwhelan@2rad.net>
 
